--- a/infra/main.yaml
+++ b/infra/main.yaml
@@ -1,74 +1,48 @@
-# infra/main.yaml
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'Pilha principal que orquestra a implantação de todos os recursos do Crypto Trading System.'
+Description: 'Main CloudFormation stack for the Crypto Trading System. It orchestrates all other nested stacks.'
 
 Parameters:
   ProjectName:
     Type: String
     Default: 'CryptoTradingSystem'
-  GitHubRepo:
-    Type: String
-    Description: "Repositório GitHub no formato 'owner/repo'"
-    Default: 'tpompeu/cripto-trading-system'
-  S3ArtifactBucket:
-    Type: String
-    Description: "Bucket onde o CodePipeline armazena os artefatos de build"
-  S3ArtifactKey:
-    Type: String
-    Description: "Caminho (.zip) para o código-fonte no bucket de artefatos"
+    Description: 'A prefix for all created resources.'
 
 Resources:
   # Pilha de IAM
   IAMStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: ./iam.yaml
+      TemplateURL: './iam.yaml'
       Parameters:
         ProjectName: !Ref ProjectName
-        GitHubRepo: !Ref GitHubRepo
 
   # Pilha de Storage
   StorageStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: ./storage.yaml
+      TemplateURL: './storage.yaml'
       Parameters:
         ProjectName: !Ref ProjectName
 
-  # Pilha de Compute (Lambda)
-  ComputeLambdaStack:
+  # Pilha de Processing
+  ProcessingStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: ./compute_lambda.yaml
+      TemplateURL: './processing.yaml'
       Parameters:
         ProjectName: !Ref ProjectName
-        DataBucketName: !GetAtt StorageStack.Outputs.DataBucketName
-        StrategyTableName: !GetAtt StorageStack.Outputs.StrategyTableName
-        S3ArtifactBucket: !Ref S3ArtifactBucket
-        S3ArtifactKey: !Ref S3ArtifactKey
+        LambdaExecutionRoleArn: !GetAtt IAMStack.Outputs.LambdaExecutionRoleArn
     DependsOn:
-      - StorageStack
       - IAMStack
-
-  # Pilha de Events
-  EventsStack:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      TemplateURL: ./events.yaml
-      Parameters:
-        ProjectName: !Ref ProjectName
-        DataDownloaderFunctionArn: !GetAtt ComputeLambdaStack.Outputs.DataDownloaderFunctionArn
-    DependsOn:
-      - ComputeLambdaStack
-
-  # A pilha do Pipeline é implantada separadamente ou na primeira vez manualmente.
-  # Se incluída aqui, cria um ciclo (pipeline implanta a pilha que contém o pipeline).
-  # É melhor manter a pilha do pipeline separada.
+      - StorageStack
 
 Outputs:
   DataBucketName:
-    Description: "Nome do S3 Bucket"
+    Description: 'S3 Bucket for data storage'
     Value: !GetAtt StorageStack.Outputs.DataBucketName
   StrategyTableName:
-    Description: "Nome da tabela DynamoDB"
+    Description: 'DynamoDB table for strategies'
     Value: !GetAtt StorageStack.Outputs.StrategyTableName
+  ValidationQueueUrl:
+    Description: 'URL of the SQS validation queue'
+    Value: !GetAtt ProcessingStack.Outputs.ValidationQueueUrl
