--- a/infra/pipeline.yaml
+++ b/infra/pipeline.yaml
@@ -1,126 +1,116 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'Cria o AWS CodePipeline para CI/CD do projeto CryptoTradingSystem. Este pipeline orquestra o build e o deploy da infraestrutura e da aplicação.'
+Description: 'CI/CD Pipeline for the Crypto Trading System. StackName: crypto-trading-pipeline-stack'
 
 Parameters:
-
-  CodeStarConnectionArn:
-    Type: String
-    Description: "ARN da conexão do AWS CodeStar para o GitHub."
-    Default: "arn:aws:codeconnections:us-east-1:957280467604:connection/6e9c6732-00bd-405c-8d63-3b3e916e8b33"
-
   ProjectName:
     Type: String
     Default: 'CryptoTradingSystem'
-    Description: "O nome do projeto, pode conter letras maiúsculas para nomes de recursos que as permitem (ex: CodePipeline, CodeBuild)."
-
-  ProjectNameLower:
+  GitHubOwner:
     Type: String
-    Default: 'cryptotradingsystem'
-    Description: "O nome do projeto em letras minúsculas, para ser usado em nomes de recursos com restrições (ex: S3 Buckets)."
-    AllowedPattern: '^[a-z0-9][a-z0-9-]{1,61}[a-z0-9]$'
-    ConstraintDescription: "Deve conter apenas letras minúsculas, números, hifens, e ter entre 3 e 63 caracteres."
-
+    Description: 'Your GitHub username or organization name.'
   GitHubRepo:
     Type: String
-    Description: "Repositório GitHub no formato 'owner/repo'"
-    Default: 'tpompeu/cripto-trading-system'
-
+    Description: 'The name of the GitHub repository.'
   GitHubBranch:
     Type: String
     Default: 'main'
-    Description: "A branch do repositório que acionará o pipeline."
-
-  GitHubTokenSecretName:
+    Description: 'The branch to trigger the pipeline from.'
+  ArtifactsBucket:
     Type: String
-    Default: 'github-token'
-    Description: "O nome do segredo no AWS Secrets Manager que contém o token do GitHub."
-
-  CodeBuildRoleArn:
-    Type: String
-    Description: "ARN da Role do IAM para o serviço AWS CodeBuild."
-
-  CloudFormationRoleArn:
-    Type: String
-    Description: "ARN da Role do IAM para o serviço AWS CloudFormation."
-
-  CodePipelineRoleArn:
-    Type: String
-    Description: "ARN da Role do IAM para o serviço AWS CodePipeline."
+    Description: 'S3 bucket for pipeline artifacts. Must be created manually beforehand.'
 
 Resources:
-  # Bucket S3 para armazenar os artefatos gerados pelo pipeline (código zipado, templates empacotados, etc.)
-  ArtifactBucket:
-    Type: AWS::S3::Bucket
+  # Conexão com o GitHub via CodeStar Connections
+  GitHubConnection:
+    Type: AWS::CodeStarConnections::Connection
     Properties:
-      BucketName:
-        Fn::Join:
-          - '-'
-          - - !Ref AWS::AccountId
-            - !Ref ProjectNameLower
-            - 'pipeline-artifacts'
-      PublicAccessBlockConfiguration:
-        BlockPublicAcls: true
-        BlockPublicPolicy: true
-        IgnorePublicAcls: true
-        RestrictPublicBuckets: true
-      VersioningConfiguration:
-        Status: Enabled
-      Tags:
-        - Key: Project
-          Value: !Ref ProjectName
+      ConnectionName: !Sub '${ProjectName}-GitHubConnection'
+      ProviderType: GitHub
 
-  # Projeto do CodeBuild que define como o código é testado, empacotado e preparado para o deploy.
+  # Role para o CodePipeline
+  CodePipelineRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: !Sub '${ProjectName}-CodePipelineRole'
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: codepipeline.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: !Sub '${ProjectName}-CodePipelinePolicy'
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 's3:GetObject'
+                  - 's3:PutObject'
+                  - 's3:ListBucket'
+                Resource: !Sub 'arn:aws:s3:::${ArtifactsBucket}/*'
+              - Effect: Allow
+                Action:
+                  - 'codestar-connections:UseConnection'
+                Resource: !Ref GitHubConnection
+              - Effect: Allow
+                Action:
+                  - 'codebuild:StartBuild'
+                  - 'codebuild:BatchGetBuilds'
+                Resource: !GetAtt CodeBuildProject.Arn
+              - Effect: Allow
+                Action:
+                  - 'cloudformation:*'
+                  - 'iam:PassRole'
+                Resource: '*'
+
+  # Projeto do CodeBuild
   CodeBuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
       Name: !Sub '${ProjectName}-BuildProject'
-      ServiceRole: !Ref CodeBuildRoleArn
+      ServiceRole: !GetAtt CodeBuildRole.Arn
       Artifacts:
         Type: CODEPIPELINE
       Environment:
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/standard:5.0
+        Image: aws/codebuild/standard:7.0
         EnvironmentVariables:
-          - Name: ARTIFACT_BUCKET
-            Value: !Ref ArtifactBucket
+          - Name: ARTIFACTS_BUCKET
+            Value: !Ref ArtifactsBucket
       Source:
         Type: CODEPIPELINE
-        BuildSpec: 'buildspec.yml' # Arquivo que contém os comandos de build
+        BuildSpec: buildspec.yml
       Tags:
         - Key: Project
           Value: !Ref ProjectName
 
-  # O Pipeline principal que orquestra todo o fluxo de CI/CD
+  # O Pipeline de CI/CD
   Pipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
-      Name: !Ref ProjectName
-      RoleArn: !Ref CodePipelineRoleArn
+      Name: !Sub '${ProjectName}-Pipeline'
+      RoleArn: !GetAtt CodePipelineRole.Arn
       ArtifactStore:
         Type: S3
-        Location: !Ref ArtifactBucket
+        Location: !Ref ArtifactsBucket
       Stages:
-        # 1. Fase de Fonte: Puxa o código do GitHub quando há um push na branch principal.
         - Name: Source
           Actions:
             - Name: GitHub_Source
               ActionTypeId:
                 Category: Source
-                Owner: ThirdParty
-                Provider: GitHub
+                Owner: AWS
+                Provider: CodeStarSourceConnection
                 Version: '1'
               Configuration:
-                Owner: !Select [0, !Split ['/', !Ref GitHubRepo]]
-                Repo: !Select [1, !Split ['/', !Ref GitHubRepo]]
-                Branch: !Ref GitHubBranch
-                PollForSourceChanges: false # Usa webhooks, mais eficiente
-                OAuthToken: !Sub '{{resolve:secrets-manager:${GitHubTokenSecretName}:SecretString:token}}'
+                ConnectionArn: !Ref GitHubConnection
+                FullRepositoryId: !Sub '${GitHubOwner}/${GitHubRepo}'
+                BranchName: !Ref GitHubBranch
               OutputArtifacts:
-                - Name: SourceOutput
-              RunOrder: 1
-
-        # 2. Fase de Build: Executa o CodeBuild para instalar dependências, empacotar a aplicação e os templates.
+                - Name: SourceArtifact
         - Name: Build
           Actions:
             - Name: Build
@@ -132,12 +122,9 @@ Resources:
               Configuration:
                 ProjectName: !Ref CodeBuildProject
               InputArtifacts:
-                - Name: SourceOutput
+                - Name: SourceArtifact
               OutputArtifacts:
-                - Name: BuildOutput
-              RunOrder: 1
-
-        # 3. Fase de Deploy: Usa o CloudFormation para implantar a infraestrutura da aplicação.
+                - Name: BuildArtifact
         - Name: Deploy
           Actions:
             - Name: Deploy_Infrastructure
@@ -147,28 +134,27 @@ Resources:
                 Provider: CloudFormation
                 Version: '1'
               Configuration:
-                ActionMode: CREATE_UPDATE_STACK
-                StackName: !Sub '${ProjectName}-AppStack'
-                TemplatePath: 'BuildOutput::packaged-main.yaml' # Artefato de saída do build
-                RoleArn: !Ref CloudFormationRoleArn
-                ParameterOverrides: !Sub |
-                  {
-                    "ProjectName": "${ProjectName}",
-                    "GitHubRepo": "${GitHubRepo}",
-                    "S3ArtifactBucket": "${ArtifactBucket}",
-                    "S3ArtifactKey": "code/application.zip"
-                  }
+                ActionMode: CREATE_UPDATE
+                StackName: !Sub '${ProjectName}-MainStack'
+                TemplatePath: 'BuildArtifact::packaged-main.yaml'
+                RoleArn: !GetAtt CloudFormationRole.Arn
+                Capabilities: 'CAPABILITY_IAM,CAPABILITY_NAMED_IAM'
               InputArtifacts:
-                - Name: BuildOutput
-              RunOrder: 1
-      Tags:
-        - Key: Project
-          Value: !Ref ProjectName
+                - Name: BuildArtifact
+
+  # Roles importadas da pilha IAM
+  CodeBuildRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: !Sub '${ProjectName}-CodeBuildRole-From-Pipeline'
+      AssumeRolePolicyDocument: { "Version": "2012-10-17", "Statement": [{ "Effect": "Allow", "Principal": { "Service": "codebuild.amazonaws.com" }, "Action": "sts:AssumeRole" }] }
+  CloudFormationRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: !Sub '${ProjectName}-CloudFormationRole-From-Pipeline'
+      AssumeRolePolicyDocument: { "Version": "2012-10-17", "Statement": [{ "Effect": "Allow", "Principal": { "Service": "cloudformation.amazonaws.com" }, "Action": "sts:AssumeRole" }] }
 
 Outputs:
   PipelineName:
-    Description: "Nome do AWS CodePipeline criado"
+    Description: 'Name of the CodePipeline'
     Value: !Ref Pipeline
-  ArtifactBucketName:
-    Description: "Nome do bucket S3 para artefatos do pipeline"
-    Value: !Ref ArtifactBucket
