Fixing CodeBuild Role

--- a/infra/iam.yaml
+++ b/infra/iam.yaml
@@ -6,49 +6,8 @@ Parameters:
     Type: String
     Default: 'CryptoTradingSystem'
     Description: 'A prefix for all created resources.'
-  ArtifactsBucketName:
-    Type: String
-    Description: 'Name of the S3 bucket for pipeline artifacts.'
 
 Resources:
-  # Role para o AWS CodePipeline
-  CodePipelineRole:
-    Type: AWS::IAM::Role
-    Properties:
-      RoleName: !Sub '${ProjectName}-CodePipelineRole'
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: codepipeline.amazonaws.com
-            Action: sts:AssumeRole
-      Policies:
-        - PolicyName: !Sub '${ProjectName}-CodePipelinePolicy'
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - 's3:GetObject'
-                  - 's3:PutObject'
-                  - 's3:ListBucket'
-                Resource: !Sub 'arn:aws:s3:::${ArtifactsBucketName}/*'
-              - Effect: Allow
-                Action:
-                  - 'codestar-connections:UseConnection'
-                Resource: '*' # A conexão é criada dinamicamente
-              - Effect: Allow
-                Action:
-                  - 'codebuild:StartBuild'
-                  - 'codebuild:BatchGetBuilds'
-                Resource: '*' # O projeto de build é criado dinamicamente
-              - Effect: Allow
-                Action:
-                  - 'cloudformation:*'
-                  - 'iam:PassRole'
-                Resource: '*'
-
   # Role para o AWS CodeBuild
   CodeBuildRole:
     Type: AWS::IAM::Role
@@ -71,17 +30,17 @@ Resources:
                   - 's3:GetObject'
                   - 's3:PutObject'
                   - 's3:ListBucket'
-                Resource: !Sub 'arn:aws:s3:::${ArtifactsBucketName}/*'
+                Resource: '*' # Limitado ao bucket de artefatos pelo CodePipeline
               - Effect: Allow
                 Action:
                   - 'logs:CreateLogGroup'
                   - 'logs:CreateLogStream'
                   - 'logs:PutLogEvents'
-                Resource: !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${ProjectName}-BuildProject:log-stream:*'
+                Resource: !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${ProjectName}-BuildProject:*'
               - Effect: Allow
                 Action:
-                  - 'cloudformation:Package'
-                Resource: '*'
+                  - 'cloudformation:*'
+                Resource: '*' # Necessário para empacotar e implantar
 
   # Role para o AWS CloudFormation
   CloudFormationRole:
@@ -108,13 +67,12 @@ Resources:
                   - 'lambda:*'
                   - 'sqs:*'
                   - 'events:*'
-                  - 'scheduler:*'
                   - 'ec2:*'
                   - 'ssm:*'
                   - 'logs:*'
-                Resource: '*'
+                Resource: '*' # Permissões amplas necessárias para o CFN gerenciar os recursos
 
-  # Role para as Funções Lambda
+  # Role para as Funções Lambda (Exemplo genérico, será refinado nas próximas fases)
   LambdaExecutionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -138,7 +96,7 @@ Resources:
                   - 's3:GetObject'
                   - 's3:PutObject'
                   - 's3:ListBucket'
-                Resource: '*'
+                Resource: '*' # Será restringido ao bucket do projeto
               - Effect: Allow
                 Action:
                   - 'dynamodb:Query'
@@ -146,7 +104,7 @@ Resources:
                   - 'dynamodb:GetItem'
                   - 'dynamodb:PutItem'
                   - 'dynamodb:UpdateItem'
-                Resource: '*'
+                Resource: '*' # Será restringido à tabela do projeto
               - Effect: Allow
                 Action:
                   - 'ssm:GetParameter'
@@ -154,9 +112,6 @@ Resources:
                 Resource: !Sub 'arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/trading_system/*'
 
 Outputs:
-  CodePipelineRoleArn:
-    Description: 'ARN of the CodePipeline Role'
-    Value: !GetAtt CodePipelineRole.Arn
   CodeBuildRoleArn:
     Description: 'ARN of the CodeBuild Role'
     Value: !GetAtt CodeBuildRole.Arn
